username and password added to smtp spec of email sender
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@173 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/europeana.properties
+++ b/europeana.properties
@@ -50,6 +50,8 @@ piwik.logUrl   = http://localhost:8888/piwik/piwik.php
 # smtp server settings
 #
 smtp.host = smtp.kb.nl
+smtp.username = username
+smtp.password = password
 
 #
 # trigger settings
