--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -50,6 +50,8 @@ piwik.logUrl   = http://localhost:8888/piwik/piwik.php
 # smtp server settings
 #
 smtp.host = smtp.kb.nl
+smtp.username = username
+smtp.password = password
 
 #
 # trigger settings
