--- a/query/pom.xml
+++ b/query/pom.xml
@@ -76,4 +76,12 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <!--this is just for EuropeanaProperties.java-->
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
+    </dependencies>
 </project>
