The EuropeanaProperties class alone takes care of loading properties from "europeana.properties" whose location must be given by -Deuropeana.properties=/path/to/europeana.properties" to the virtual machine on startup.  These properties are used for spring appcontext substitution, and directly in a few places where spring is not used.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@226 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/resolver/pom.xml
+++ b/resolver/pom.xml
@@ -85,6 +85,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <!--this is just for the EuropeanaProperties.java-->
+            <groupId>eu.europeana</groupId>
+            <artifactId>query</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.5</version>
