for #180 moved query model implementation from portal-core to database module
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@240 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -239,6 +239,16 @@
             <artifactId>wstx-asl</artifactId>
             <version>3.2.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20070829</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <spring.version>2.5.6</spring.version>
