for #293:  tidied up the layout of the user tab, added disabled fields for userName and email
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@286 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
+++ b/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
@@ -113,7 +113,7 @@ editHtml=Edit the HTML:
 revert=Revert
 numberOfPartnersPrompt=Number of Partners:
 languages=Languages:
-userEnabled=User Enabled:
+userEnabled=Enabled
 deleteThisUser=Delete this user
 messageKey=Message Key:
 add=add
@@ -159,3 +159,4 @@ selectAll=Select All
 selectNone=None
 deleteFile=Delete File
 noImportFilePresent=There is no import file present
+userName=Username
