for #293:  refactored to update the whole user object at once instead of separate fields in separate methods.  made the user tab a lot neater in both look and behavior.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@292 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
+++ b/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
@@ -24,8 +24,7 @@ pleaseWait=Please Wait
 serverProblem=Sorry, there has been a server problem.
 yesIAmSure=Yes
 noIAmSure=No
-# change later back to submit ???
-submit=Save
+submit=Submit
 collectionEnablementCaption=Confirmation
 enabled=enabled
 disable=disable
@@ -115,6 +114,7 @@ numberOfPartnersPrompt=Number of Partners:
 languages=Languages:
 userEnabled=Enabled
 deleteThisUser=Delete this user
+updateThisUser=Update this user
 messageKey=Message Key:
 add=add
 anyImportFileState=***(Any File State)***
@@ -146,7 +146,7 @@ collectionDescription=Description:
 dataSetCounters=contains {0,number,#######} record(s), {1,number,#######} thumbnail(s)
 
 importFileStatus=imported: {0,date,short} at {0,time,short} by {1}
-projectId=Provider Name:
+projectId=Project ID:
 providerId=Provider ID:
 sandboxTab=Content Checker: Ingestor
 filterNotStarted=Not Started
@@ -159,4 +159,8 @@ selectAll=Select All
 selectNone=None
 deleteFile=Delete File
 noImportFilePresent=There is no import file present
-userName=Username
+userName=Username:
+firstName=First Name:
+lastName=Last Name:
+newsletter=Newsletter:
+rolePrompt=Role:
