--- a/portal-lite/src/main/webapp/WEB-INF/web.xml
+++ b/portal-lite/src/main/webapp/WEB-INF/web.xml
@@ -25,12 +25,9 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            classpath:database-application-context.xml
-            classpath:core-application-context.xml
-            classpath:application-context.xml
-        </param-value>
+        <param-value>classpath:/application-context.xml</param-value>
     </context-param>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
         <!--<listener-class>eu.europeana.util.HostBasedContextLoaderListener</listener-class>-->
