#377 new-user button!  added password to UserX transfer object, and to UsersWidget, and if password comes in to User constructor it is hashed, and if a hashed password arrives in UserDaoImpl it is used.  administrator can now set passwords for existing users, create new users from scratch and assign passwords.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@356 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
+++ b/dashboard/src/main/java/eu/europeana/dashboard/client/DashboardMessages.properties
@@ -164,3 +164,5 @@ firstName=First Name:
 lastName=Last Name:
 newsletter=Newsletter:
 rolePrompt=Role:
+createUser=Create new test user (careful!)
+setPassword=Set password to:
