Enforcing Java 6 buid
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@369 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -68,4 +68,17 @@
         <name>Europeana Foundation</name>
         <url>http://www.europeana.eu</url>
     </organization>
+   
+    <build>
+         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+         </plugins>
+    </build>
+    
 </project>
