--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,16 @@
             </plugin>
          </plugins>
     </build>
-    
+    <properties>
+        <europeana.query.version>1.0.1</europeana.query.version>
+        <europeana.cache.version>1.0.1</europeana.cache.version>
+        <europeana.database.version>1.0.1</europeana.database.version>
+        <europeana.bootstrap.version>0.5</europeana.bootstrap.version>
+        <europeana.resolver.version>1.0</europeana.resolver.version>
+        <europeana.normalizer.version>2.8</europeana.normalizer.version>
+        <europeana.portal.version>0.6</europeana.portal.version>
+        
+        <spring.version>2.5.6</spring.version>
+        
+    </properties>
 </project>
