--- a/query/pom.xml
+++ b/query/pom.xml
@@ -26,7 +26,7 @@
     <artifactId>query</artifactId>
     <packaging>jar</packaging>
     <name>The Query and Response Model</name>
-    <version>1.7</version>
+    <version>${europeana.query.version}</version>
     <description>Query/Response Shared by multiple projects</description>
     <inceptionYear>2008</inceptionYear>
  
@@ -65,13 +65,6 @@
                 <configuration>
                     <groups>regression</groups>
                     <parallel>true</parallel>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
                 </configuration>
             </plugin>
         </plugins>
