--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <groups>regression</groups>
+                    <parallel>true</parallel>
+                </configuration>
+           </plugin>
          </plugins>
     </build>
     <properties>
