--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,6 @@
         <europeana.portal.version>0.6</europeana.portal.version>
         
         <spring.version>2.5.6</spring.version>
-        
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
