feeding europeana.proeprties to surefire
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@381 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
                 <configuration>
                     <groups>regression</groups>
                     <parallel>true</parallel>
+                    <systemProperties>
+                        <property>
+                            <name>europeana.properties</name>
+                            <value>../query/src/test/resources/europeana.properties</value>
+                        </property>
+                    </systemProperties>      
                 </configuration>
            </plugin>
          </plugins>
