harmonizing junit dependency & move to gwt 1.7.0
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@384 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,17 @@
                         </property>
                     </systemProperties>      
                 </configuration>
-           </plugin>
+            </plugin>
          </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.5</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <europeana.query.version>1.0.1</europeana.query.version>
         <europeana.cache.version>1.0.1</europeana.cache.version>
