--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -196,15 +196,16 @@
             <scope>provided</scope>
 -->
         </dependency>
-<!-- 
+
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
             <version>${gwtVersion}</version>
             <classifier>${platform}</classifier>
+<!-- 
             <scope>provided</scope>
-        </dependency>
 -->
+        </dependency>
 
         <!--the following is temporary: springmvc on the server-->
         <dependency>
@@ -283,14 +284,15 @@
             <version>2.3.14</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.4</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+            <version>6.1.7</version>
             <scope>test</scope>
         </dependency>
+        
     </dependencies>
     <properties>
-        <gwtVersion>1.7.1</gwtVersion>
+        <gwtVersion>1.7.0</gwtVersion>
         <google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>
         <jetty.version>6.1.7</jetty.version>
     </properties>
