http://europeanalabs.eu/ticket/91
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@391 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/normalizer/pom.xml
+++ b/normalizer/pom.xml
@@ -68,37 +68,29 @@
             <version>${europeana.query.version}</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${commons.httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
             <artifactId>wstx-lgpl</artifactId>
-            <version>3.2.0</version>
+            <version>${woodstox.version}</version>
         </dependency>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.3</version>
+            <version>${xstream.version}</version>
         </dependency>
         <dependency>
             <groupId>org.htmlparser</groupId>
             <artifactId>htmlparser</artifactId>
-            <version>1.6</version>
+            <version>${htmlparser.version}</version>
         </dependency>
     </dependencies>
-    <properties>
-        <jdkLevel>1.6</jdkLevel>
-    </properties>
 </project>
