--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -160,17 +160,17 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${commons.httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
             <artifactId>wstx-lgpl</artifactId>
-            <version>3.2.0</version>
+            <version>${woodstox.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>8.2-504.jdbc3</version>
+            <version>${postgres.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -286,7 +286,7 @@
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
-            <version>6.1.7</version>
+            <version>${jetty.version}</version>
             <scope>test</scope>
         </dependency>
         
@@ -294,6 +294,5 @@
     <properties>
         <gwtVersion>1.7.0</gwtVersion>
         <google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>
-        <jetty.version>6.1.7</jetty.version>
     </properties>
 </project>
