--- a/database/pom.xml
+++ b/database/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>8.3-603.jdbc3</version>
+            <version>${postgres.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -194,11 +194,6 @@
             <version>1.3.4</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.4.3</version>
@@ -206,12 +201,12 @@
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.3.1</version>
+            <version>${xstream.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
