--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,30 @@
     <version>1</version>
     <packaging>pom</packaging>
 
+    <developers>
+        <developer>
+            <name>Sjoerd Siebinga</name>
+            <email>sjoerd.siebinga@gmail.com</email>
+            <roles>
+                <role>architect</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Gerald de Jong</name>
+            <email>geralddejong@gmail.com</email>
+            <roles>
+                <role>consultant</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Borys Omelayenko</name>
+            <email>borys.omelayenko@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+
     <repositories>
          <repository>
                 <id>releases</id>
@@ -102,6 +126,12 @@
             <version>4.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
+        
     </dependencies>
     <properties>
         <europeana.query.version>1.0.1</europeana.query.version>
@@ -111,8 +141,20 @@
         <europeana.resolver.version>1.0</europeana.resolver.version>
         <europeana.normalizer.version>2.8</europeana.normalizer.version>
         <europeana.portal.version>0.6</europeana.portal.version>
-        
+  
+        <jdkLevel>1.6</jdkLevel>       
         <spring.version>2.5.6</spring.version>
+        <jetty.version>6.1.7</jetty.version>
+        <woodstox.version>3.2.0</woodstox.version>
+        <htmlparser.version>1.6</htmlparser.version>
+        <commons.io.version>1.4</commons.io.version>
+        <commons.httpclient.version>3.1</commons.httpclient.version>
+        <xstream.version>1.3.1</xstream.version>
+        <htmlunit.version>2.5</htmlunit.version>
+        <servlet.version>2.4</servlet.version>
+        <postgres.version>8.2-504.jdbc3</postgres.version>
+        
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 </project>
