--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -150,12 +150,12 @@
         <dependency>
             <groupId>quartz</groupId>
             <artifactId>quartz</artifactId>
-            <version>1.5.2</version>
+            <version>${quartz.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.2.1</version>
+            <version>${commons.fileupload.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -246,42 +246,42 @@
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <version>${c3p0.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
-            <version>3.2.5.ga</version>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.3.1.ga</version>
+            <version>${hibernate.entitymanager}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
-            <version>3.3.0.ga</version>
+            <version>${hibernate.annotations}</version>
         </dependency>
         <dependency>
             <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
-            <version>1.3.4</version>
+            <version>${concurrent.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.3</version>
+            <version>${commons.lang.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
-            <version>3.2</version>
+            <version>${commons.collections.version}</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.14</version>
+            <version>${freemarker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
@@ -291,8 +291,4 @@
         </dependency>
         
     </dependencies>
-    <properties>
-        <gwtVersion>1.7.0</gwtVersion>
-        <google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>
-    </properties>
 </project>
