--- a/pom.xml
+++ b/pom.xml
@@ -147,14 +147,46 @@
         <jetty.version>6.1.7</jetty.version>
         <woodstox.version>3.2.0</woodstox.version>
         <htmlparser.version>1.6</htmlparser.version>
+        
         <commons.io.version>1.4</commons.io.version>
         <commons.httpclient.version>3.1</commons.httpclient.version>
+        <commons.collections.version>3.2</commons.collections.version>
+        <commons.lang.version>2.3</commons.lang.version>
+        <commons.fileupload.version>1.2.1</commons.fileupload.version>
+        
+        <concurrent.version>1.3.4</concurrent.version>
+        <quartz.version>1.5.2</quartz.version>
+        <slf4j.version>1.4.3</slf4j.version>
+        <oclc-srw.version></oclc-srw.version>
+        
+        
+        <hibernate.version>3.2.6.ga</hibernate.version>
+        <hibernate.annotations>3.4.0.ga</hibernate.annotations>
+        <hibernate.entitymanager>3.3.2.ga</hibernate.entitymanager>
+        
+        <c3p0.version>0.9.1.2</c3p0.version>
         <xstream.version>1.3.1</xstream.version>
         <htmlunit.version>2.5</htmlunit.version>
-        <servlet.version>2.4</servlet.version>
+        <servlet.version>2.5</servlet.version>
         <postgres.version>8.2-504.jdbc3</postgres.version>
-        
+        <freemaker.version>2.3.14</freemaker.version>
+        <wstx.asl.version>3.2.7</wstx.asl.version>
+        <json.version>20070829</json.version>
+        <lucene.core.version>2.3.2</lucene.core.version>
+        <hsqldb.version>1.8.0.10</hsqldb.version>
+  
+        <oclc.srw.version>1.0.20080328</oclc.srw.version>
+        <cql.java.version>1.0</cql.java.version>
+        <mail.version>1.4</mail.version>
+        <jawr.version>2.8</jawr.version>
+        <srw.lucene.version>1.0</srw.lucene.version>
+ 
+  
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        
+        <gwtVersion>1.7.0</gwtVersion>
+        <google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>
+        
     </properties>
 </project>
