--- a/portal-core/pom.xml
+++ b/portal-core/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>2.0.3</version>
+            <version>${spring.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>spring-support</artifactId>
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>2.0.3</version>
+            <version>${spring.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>spring-web</artifactId>
@@ -135,38 +135,38 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.14</version>
+            <version>${freemarker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.dspace.oclc</groupId>
             <artifactId>oclc-srw</artifactId>
-            <version>1.0.20080328</version>
+            <version>${oclc.srw.version}</version>
         </dependency>
         <dependency>
             <groupId>org.dspace</groupId>
             <artifactId>cql-java</artifactId>
-            <version>1.0</version>
+            <version>${cql.java.version}</version>
         </dependency>
          <dependency>
             <groupId>quartz</groupId>
             <artifactId>quartz</artifactId>
-            <version>1.5.2</version>
+            <version>${quartz.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
-            <version>1.4</version>
+            <version>${mail.version}</version>
         </dependency>
          <dependency>
             <groupId>net.jawr</groupId>
             <artifactId>jawr</artifactId>
-            <version>2.8</version>
+            <version>${jawr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osuosl.srw</groupId>
             <artifactId>srw_lucene</artifactId>
             <!--suppress MavenModelInspection -->
-            <version>1.0</version>
+            <version>${srw.lucene.version}</version>
         </dependency>
     </dependencies>
 </project>
