--- a/pom.xml
+++ b/pom.xml
@@ -143,10 +143,12 @@
         <europeana.portal.version>0.6</europeana.portal.version>
   
         <jdkLevel>1.6</jdkLevel>       
+        
         <spring.version>2.5.6</spring.version>
+        <spring.security.version>2.0.3</spring.security.version>
+        
         <jetty.version>6.1.7</jetty.version>
-        <woodstox.version>3.2.0</woodstox.version>
-        <htmlparser.version>1.6</htmlparser.version>
+        <servlet.version>2.5</servlet.version>
         
         <commons.io.version>1.4</commons.io.version>
         <commons.httpclient.version>3.1</commons.httpclient.version>
@@ -154,12 +156,13 @@
         <commons.lang.version>2.3</commons.lang.version>
         <commons.fileupload.version>1.2.1</commons.fileupload.version>
         
+        <woodstox.version>3.2.0</woodstox.version>
+        <htmlparser.version>1.6</htmlparser.version>
         <concurrent.version>1.3.4</concurrent.version>
         <quartz.version>1.5.2</quartz.version>
         <slf4j.version>1.4.3</slf4j.version>
-        <oclc-srw.version></oclc-srw.version>
-        
-        
+        <oclc.srw.version>1.0.20080328</oclc.srw.version>
+                
         <hibernate.version>3.2.6.ga</hibernate.version>
         <hibernate.annotations>3.4.0.ga</hibernate.annotations>
         <hibernate.entitymanager>3.3.2.ga</hibernate.entitymanager>
@@ -167,18 +170,18 @@
         <c3p0.version>0.9.1.2</c3p0.version>
         <xstream.version>1.3.1</xstream.version>
         <htmlunit.version>2.5</htmlunit.version>
-        <servlet.version>2.5</servlet.version>
-        <postgres.version>8.2-504.jdbc3</postgres.version>
-        <freemaker.version>2.3.14</freemaker.version>
+        <freemarker.version>2.3.14</freemarker.version>
         <wstx.asl.version>3.2.7</wstx.asl.version>
         <json.version>20070829</json.version>
-        <lucene.core.version>2.3.2</lucene.core.version>
+
         <hsqldb.version>1.8.0.10</hsqldb.version>
+        <postgres.version>8.2-504.jdbc3</postgres.version>
   
-        <oclc.srw.version>1.0.20080328</oclc.srw.version>
         <cql.java.version>1.0</cql.java.version>
         <mail.version>1.4</mail.version>
         <jawr.version>2.8</jawr.version>
+
+        <lucene.core.version>2.3.2</lucene.core.version>
         <srw.lucene.version>1.0</srw.lucene.version>
  
   
