http://europeanalabs.eu/ticket/91
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@399 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -181,12 +181,12 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.entitymanager}</version>
+            <version>${hibernate.entitymanager.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
-            <version>${hibernate.annotations}</version>
+            <version>${hibernate.annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>concurrent</groupId>
