--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,9 @@
         <slf4j.version>1.4.3</slf4j.version>
         <oclc.srw.version>1.0.20080328</oclc.srw.version>
                 
-        <hibernate.version>3.2.6.GA</hibernate.version>
-        <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
-        <hibernate.entitymanager.version>3.3.2.GA</hibernate.entitymanager.version>
+        <hibernate.version>3.2.7.ga</hibernate.version>
+        <hibernate.annotations.version>3.4.0.ga</hibernate.annotations.version>
+        <hibernate.entitymanager.version>3.3.2.ga</hibernate.entitymanager.version>
         
         <c3p0.version>0.9.1.2</c3p0.version>
         <xstream.version>1.3.1</xstream.version>
