--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
         <oclc.srw.version>1.0.20080328</oclc.srw.version>
                 
         <hibernate.version>3.2.7.ga</hibernate.version>
-        <hibernate.annotations.version>3.4.0.ga</hibernate.annotations.version>
+        <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
         <hibernate.entitymanager.version>3.3.2.ga</hibernate.entitymanager.version>
         
         <c3p0.version>0.9.1.2</c3p0.version>
