--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
                 
         <hibernate.version>3.2.7.ga</hibernate.version>
         <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
-        <hibernate.entitymanager.version>3.3.2.ga</hibernate.entitymanager.version>
+        <hibernate.entitymanager.version>3.3.2.GA</hibernate.entitymanager.version>
         
         <c3p0.version>0.9.1.2</c3p0.version>
         <xstream.version>1.3.1</xstream.version>
