#294 added javadoc plugin.  now mvn javadoc:javadoc generates documentation.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@406 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -109,6 +109,19 @@
                     </srcFiles>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <!--
+                    <detectLinks>true</detectLinks>
+                    http://jira.codehaus.org/browse/MJAVADOC-273
+                    -->
+                    <excludePackageNames>*.migration.*, *.json.*, *.integration.*, *.dao.*</excludePackageNames>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
