#295 Hypersonic now using only memory.  UserFixture now makes multiple users, TestUserDao checks authentication and password change.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@415 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/query/src/test/resources/europeana.properties
+++ b/query/src/test/resources/europeana.properties
@@ -24,7 +24,7 @@
 # database connection settings
 #
 db.driverClass = org.hsqldb.jdbcDriver
-db.jdbcUrl     = jdbc:hsqldb:file:/tmp/hsql-for-unit-test
+db.jdbcUrl     = jdbc:hsqldb:mem:hsql-for-unit-test
 db.user        = sa
 db.password    =
 
