--- a/portal-lite/src/main/webapp/WEB-INF/web.xml
+++ b/portal-lite/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,6 @@
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-        <!--<listener-class>eu.europeana.util.HostBasedContextLoaderListener</listener-class>-->
     </listener>
 
     <filter>
@@ -70,7 +69,7 @@
 
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>eu.europeana.util.Utf8OnlyFilter</filter-class>
+        <filter-class>eu.europeana.controller.util.Utf8OnlyFilter</filter-class>
     </filter>
 
     <!--<filter>-->
