--- a/portal-lite/src/main/webapp/WEB-INF/web.xml
+++ b/portal-lite/src/main/webapp/WEB-INF/web.xml
@@ -69,7 +69,7 @@
 
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>eu.europeana.controller.util.Utf8OnlyFilter</filter-class>
+        <filter-class>eu.europeana.web.util.Utf8OnlyFilter</filter-class>
     </filter>
 
     <!--<filter>-->
