--- a/cache-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/cache-servlet/src/main/webapp/WEB-INF/web.xml
@@ -35,15 +35,27 @@
 		<url-pattern>/image/*</url-pattern>
 	</servlet-mapping>
 
-	<welcome-file-list>
-		<welcome-file>/index.html</welcome-file>
-	</welcome-file-list>
 
-<!--
-    <error-page>
-        <error-code>404</error-code>
-        <location>/portal/error.html</location>
-    </error-page>
--->
+    <servlet>
+        <servlet-name>resolver</servlet-name>
+        <servlet-class>eu.europeana.cache.ResolverServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>resolver</servlet-name>
+        <url-pattern>/resolve/*</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>/index.html</welcome-file>
+    </welcome-file-list>
+    
+    <!--
+        <error-page>
+            <error-code>404</error-code>
+            <location>/portal/error.html</location>
+        </error-page>
+    -->
 
 </web-app>
