#448 Renamed query module to common
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@469 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,10 +23,10 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.europeana</groupId>
-    <artifactId>query</artifactId>
+    <artifactId>common</artifactId>
     <packaging>jar</packaging>
     <name>The Query and Response Model</name>
-    <version>${europeana.query.version}</version>
+    <version>${europeana.common.version}</version>
     <description>Query/Response Shared by multiple projects</description>
     <inceptionYear>2008</inceptionYear>
 
