--- a/cache-servlet/pom.xml
+++ b/cache-servlet/pom.xml
@@ -8,7 +8,7 @@
     <version>${europeana.cache.version}</version>
     <description>Servlet</description>
     <inceptionYear>2008</inceptionYear>
- 
+
   <parent>
     <groupId>eu.europeana</groupId>
     <artifactId>europeana</artifactId>
@@ -37,8 +37,8 @@
     <dependencies>
         <dependency>
             <groupId>eu.europeana</groupId>
-            <artifactId>query</artifactId>
-            <version>${europeana.query.version}</version>
+            <artifactId>common</artifactId>
+            <version>${europeana.common.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
