#448 finally removed query module, since common replaces it
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@471 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <module>bootstrap</module>
         <module>portal-core</module>
         <module>portal-lite</module>
+        <module>portal-full</module>
     </modules>
     <organization>
         <name>Europeana Foundation</name>
@@ -361,7 +362,6 @@
     </dependencyManagement>
     <properties>
         <europeana.common.version>1.0.1</europeana.common.version>
-        <europeana.cache.version>1.0.1</europeana.cache.version>
         <europeana.database.version>1.0.1</europeana.database.version>
         <europeana.bootstrap.version>0.5</europeana.bootstrap.version>
         <europeana.normalizer.version>2.8</europeana.normalizer.version>
