#452 initial xstream parser for the europeana-profile.xml
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@474 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -64,5 +64,9 @@
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+        </dependency>
     </dependencies>
 </project>
