#202 Spring 3.0.0M3 added to pom and further clean-up portal-full, portal-core and database.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@476 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-core/pom.xml
+++ b/portal-core/pom.xml
@@ -31,7 +31,7 @@
         (production version) web-modules
     </description>
     <inceptionYear>2009</inceptionYear>
- 
+
   <parent>
     <groupId>eu.europeana</groupId>
     <artifactId>europeana</artifactId>
@@ -151,6 +151,11 @@
             <groupId>org.osuosl.srw</groupId>
             <artifactId>srw_lucene</artifactId>
             <!--suppress MavenModelInspection -->
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>3.0.0.M3</version>
         </dependency>
     </dependencies>
 </project>
