--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
         <module>database</module>
         <module>normalizer</module>
         <module>dashboard</module>
-        <module>cache-servlet</module>
+        <module>api</module>
         <module>bootstrap</module>
         <module>portal-core</module>
         <module>portal-lite</module>
@@ -386,6 +386,7 @@
         <europeana.bootstrap.version>0.5</europeana.bootstrap.version>
         <europeana.normalizer.version>2.8</europeana.normalizer.version>
         <europeana.portal.version>0.6</europeana.portal.version>
+        <europeana.api.version>0.1</europeana.api.version>
 
         <jdkLevel>1.6</jdkLevel>
 
