#469 common module adopted by database module
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@496 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -126,12 +126,7 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>eu.europeana</groupId>
-            <artifactId>common</artifactId>
-            <version>${europeana.common.version}</version>
-        </dependency>
-        <dependency>
+xs        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
@@ -212,6 +207,10 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
